made the basic layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <h1 class="title">
+            <span class="title-1">Rock</span>
+            <span class="title-2">Paper</span>
+            <span class="title-3">Scissors</span>
+        </h1>
+
+        <div class="itemsWrapper">
+            <div class="item rock">
+                <img src="./production/svg/rock.svg" alt="rock">
+            </div>
+            <div class="item paper">
+                <img src="./production/svg/paper.svg" alt="paper">
+            </div>
+            <div class="item scissors">
+                <img src="./production/svg/scissors.svg" alt="scissors">
+            </div>
+        </div>
+
+        <div class="shoot">
+            <button class="shootBtn">Shoot!</button>
+            <div class="scoreWrapper">
+                <div class="you">1</div>
+                <div class="them">0</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
