really fixed the bug

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
         <div class="itemsWrapper">
             <div class="item rock">
-                <img src="./production/svg/rock.svg" alt="rock">
+                <img src="./production/svg/Rock.svg" alt="rock">
             </div>
             <div class="item paper">
-                <img src="./production/svg/paper.svg" alt="paper">
+                <img src="./production/svg/Paper.svg" alt="paper">
             </div>
             <div class="item scissors">
-                <img src="./production/svg/scissors.svg" alt="scissors">
+                <img src="./production/svg/Scissors.svg" alt="scissors">
             </div>
         </div>
 
