began making the user able to play

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </h1>
 
         <div class="itemsWrapper">
-            <div class="item rock">
-                <img src="./production/svg/Rock.svg" alt="rock">
+            <div class="item rock" data-type="0">
+                <img src="./production/svg/Rock.svg" alt="1">
             </div>
-            <div class="item paper">
-                <img src="./production/svg/Paper.svg" alt="paper">
+            <div class="item paper" data-type="1">
+                <img src="./production/svg/Paper.svg" alt="2">
             </div>
-            <div class="item scissors">
-                <img src="./production/svg/Scissors.svg" alt="scissors">
+            <div class="item scissors" data-type="2">
+                <img src="./production/svg/Scissors.svg" alt="3">
             </div>
         </div>
 
