--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/apple_watch_responsive_1.2.css">
+    <link rel="shortcut icon" href="./production/svg/Rock.svg" type="image/x-icon">
     <script src="./js/main.js" type="module" defer></script>
-    <link rel="shortcut icon" href="./production/svg/Skull.svg" type="image/x-icon">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
     <div class="container">
