--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
     <div class="container">
+        <div class="startScreen">
+            <button class="startButton">Start</button>
+        </div>
+
         <h1 class="title">
-            <span class="title-1">Rock</span>
-            <span class="title-2">Paper</span>
-            <span class="title-3">Scissors</span>
+            <span>Rock</span>
+            <span>Paper</span>
+            <span>Scissors</span>
         </h1>
         
         <div class="itemsWrapper">
